Correct the z-index of headers, genres and videoPopup

--- a/src/components/header/Header.styles.scss
+++ b/src/components/header/Header.styles.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 60px;
-  z-index: 3;
+  z-index: 4;
   padding: 0 10px;
   display: flex;
   align-items: center;
@@ -24,11 +24,11 @@
 
   &.show {
     background-color: var(--black);
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.7);
   }
 
   &.hide {
     transform: translateY(-60px);
+    pointer-events: none;
     @include md {
       transform: translateY(-80px);
     }
