--- a/src/components/videoPopup/VideoPopup.styles.scss
+++ b/src/components/videoPopup/VideoPopup.styles.scss
@@ -36,7 +36,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 7;
+    z-index: 6;
     transform: scale(0.2);
     transition: all 0.3s;
 
